--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "gulp-eslint": "^4.0.0",
     "gulp-less": "^3.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "connect": "^3.6.3",
+    "express": "^4.15.4",
+    "socket.io": "^2.0.3"
+  }
 }
